# pybada

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt
.github/: dependabot.yml
.github/workflows/: lint.yml  pytest.yml  release.yml  sphinx.yml
docs/: TCL.rst  aircraft.rst  atmosphere.rst  bada3.rst  bada4.rst  badaH.rst  conf.py  flightTrajectory.rst  geodesic.rst  index.rst  magnetic.rst  trajectoryPrediction.rst
docs/source/: conf.py  index.rst  pyBADA.rst
docs/source/API_reference/: badaAircraft.rst  myTypes.rst  trajectorySegments.rst
docs/source/_templates/: footer.html
examples/: BADAClimb.py  BADAData.py  BADADescent.py  ac_trajectory.py  ac_trajectory_GPS.py  destPointApplyingSlopeForDistanceAndBearing.py  example_script.py  fuelFlow.py  geodesic.py  heli_trajectory.py  initialMass.py  initial_mass.py  optimumSpeedAndAltitude.py  optimum_speed_altitude.py  slopeRequired.py  trajectoryAC.py  trajectoryAC_GPS.py  trajectoryHELI.py
src/pyBADA/: TCL.py  aircraft.py  atmosphere.py  bada3.py  bada4.py  badaAircraft.py  badaE.py  badaH.py  configuration.py  conversions.py  flightTrajectory.py  geodesic.py  magnetic.py  myTypes.py  trajectoryPrediction.py  trajectorySegments.py  utils.py
tests/: atmosphereTest.py
