[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyBADA"
version = "0.1.11"
authors = [
  { name="Henrich Glaser-Opitz", email="henrich.glaser-opitz@eurocontrol.int" },
  { name="Antonio Vivace", email="antonio.vivace@eurocontrol.int" }
]
description = "Aircraft performance modelling, trajectory prediction and optimisation, and visualisation with EUROCONTROL's BADA."
readme = "README.md"
requires-python = ">=3.11.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)"
]
dependencies = [
  "scipy>=1.11.0",
  "numpy>=1.26.0",
  "pandas>=2.0.0",
  "simplekml>=1.3.6",
  "XlsxWriter>=3.2.9",
  "xarray>=2024.10.0"
]
license = { text = "EUPL-1.2" }

# Some additional deps not needed to run the package but to develop on it
# linter, formatter, to build the docs, ..
[project.optional-dependencies]
dev = [
  "sphinx-rtd-theme>=3.0.0",
  "Sphinx>=7.0.0",
  "pre-commit>=4.0.0",
  "sphinx-gallery>=0.16.0",
  "matplotlib>=3.8.0",
  "folium>=0.15.0",
  "pytest>=8.0.0",
  "build>=1.0.0",
  "twine>=5.0.0",
  "readthedocs-sphinx-search>=0.3.2",
  "ruff>=0.4.0",
  ]

[project.urls]
"Homepage" = "https://github.com/eurocontrol-bada/pybada"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff]
target-version = 'py311'
line-length = 79
exclude = [
  ".git",
  ".hg",
  ".mypy_cache",
  ".tox",
  ".venv",
  "_build",
  "buck-out",
  "docs",
  "dist",
]

[tool.ruff.lint]
# select = ["E", "F401", "W", "C90", "B", "UP", "SIM", "I"]
select = ["E", "F401", "W", "I"]
ignore = ["E501"]

[tool.hatch.build.targets.wheel]
packages = ["src/pyBADA"]

[tool.hatch.build.targets.wheel.force-include]
"src/aircraft/BADA3/DUMMY" = "pyBADA/aircraft/BADA3/DUMMY"
"src/aircraft/BADA4/DUMMY" = "pyBADA/aircraft/BADA4/DUMMY"
"src/aircraft/BADAH/DUMMY" = "pyBADA/aircraft/BADAH/DUMMY"
"src/data" = "pyBADA/data"
